crates/ic-lint/tests/snapshots/duplicate_raises__duplicate_attribute_getraises.snap
---
source: crates/ic-lint/tests/duplicate_raises.rs
expression: test_lint_hir(source)
---
⨯ duplicate-raises: duplicate exception `ReadError` in getraises clause of `value`
  @ test.idl:7:50

 6 │ interface Service {
 7 │     attribute string value getraises (ReadError, ReadError);
   │                                       ˆˆˆˆˆˆˆˆˆ  ˆˆˆˆˆˆˆˆˆ duplicate exception
   │                                       └─ first listed here
 8 │ };

  ? remove the duplicate exception from the clause
