crates/ic-lint/tests/snapshots/duplicate_raises__duplicate_proto_raises.snap
---
source: crates/ic-lint/tests/duplicate_raises.rs
expression: test_lint_hir(source)
---
⨯ duplicate-raises: duplicate exception `NotFound` in raises clause of `get`
  @ test.idl:7:34

 6 │ interface Service {
 7 │     void get() raises (NotFound, NotFound);
   │                        ˆˆˆˆˆˆˆˆ  ˆˆˆˆˆˆˆˆ duplicate exception
   │                        └─ first listed here
 8 │ };

  ? remove the duplicate exception from the clause
